--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<header>
 					<div class="wrapper">
 				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" alt="minimo"></a>
+					<a href="index.html"><img src="images/logo.png" alt="strict"></a>
 				</div>
 				<nav class=menu>
 					<ul>
